# Driver-Assistant

./: CMakeLists.txt  LICENSE  README.md
include/: bottomSideContainer.h  cameraController.h  mainContainer.h  main_container.h  main_widget.h  opencvImageWidget.h  rightSideContainer.h
src/: bottomSideContainer.cpp  cameraController.cpp  capturCamera.cpp  main.cpp  mainContainer.cpp  opencvImageWidget.cpp  rightSideContainer.cpp
